last for fundamentals

--- a/1_fundamentals.ipynb
+++ b/1_fundamentals.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "# Introduction to pytorch"
+    "## Introduction to pytorch"
    ]
   },
   {
@@ -23,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -46,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -61,7 +63,7 @@
        "tensor(7)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -88,7 +90,7 @@
        "0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -114,7 +116,7 @@
        "7"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +485,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Random tensor"
    ]
@@ -777,7 +781,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## creating a range of tensors and tensors-like"
    ]
@@ -846,7 +852,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Tensor datatypes\n",
     "\n",
@@ -942,7 +950,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## getting infromation about tenosrs (tensor attributes)\n",
     "1. to get date type of a tensor, use `tensor.dtype`\n",
@@ -1106,15 +1116,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## manupaltin tesnors\n",
     "\n",
     "tensors operatons include:\n",
-    "* Adding\n",
-    "* Subtraction\n",
+    "* Adding \n",
+    "* Subtraction \n",
     "* Multiplication (element-wise)\n",
-    "* Division\n",
+    "* Division \n",
     "* Matrix multipliciton"
    ]
   },
@@ -1256,9 +1268,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "## Matrix multiplicaiton\n",
+    "### Matrix multiplicaiton\n",
     "\n",
     "tow main ways of performing multiplicaton in neural networks and deep learning:\n",
     "1. Element-wise multiplication\n",
@@ -1393,7 +1407,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## one of the most common errors in deep learning: shape errors:"
    ]
@@ -1499,7 +1515,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Finding the min, max, mean, sum, etc(tensor aggregaion)"
    ]
@@ -1742,7 +1760,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Reshaping, stacking, squeezing and unsqueezing tensors\n",
     "\n",
@@ -1817,7 +1837,7 @@
    ],
    "source": [
     "x_reshaped = x.reshape(1, 9)\n",
-    "x_reshaped, x_reshaped.shape"
+    "x_reshaped, x_reshaped.shape, "
    ]
   },
   {
@@ -1959,7 +1979,7 @@
     }
    ],
    "source": [
-    "# change the view\n",
+    "# create a view, also you can reshape it at the same time\n",
     "z = x.view(1, 9)\n",
     "z, z.shape"
    ]
@@ -2146,7 +2166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2154,7 +2174,7 @@
      "output_type": "stream",
      "text": [
       "previous shape: torch.Size([224, 224, 3])\n",
-      "previous shape: torch.Size([3, 224, 224])\n"
+      "new shape: torch.Size([3, 224, 224])\n"
      ]
     }
    ],
@@ -2166,7 +2186,7 @@
     "x_permuted = x_original.permute(2, 0, 1) # shifts axis 0->1, 1->2, 2->0\n",
     "\n",
     "print(f'previous shape: { x_original.shape}')\n",
-    "print(f'previous shape: { x_permuted.shape}') # [colour_channels, height, width]"
+    "print(f'new shape: { x_permuted.shape}') # [colour_channels, height, width]"
    ]
   },
   {
@@ -2300,7 +2320,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Indexing (selection data from tensors)\n",
     "\n",
@@ -2492,7 +2514,7 @@
     }
    ],
    "source": [
-    "# Get all values of 0th and 1st dimensions but only index 1 and 2nd dimension\n",
+    "# Get all values of 0th and 1st dimensions but only index 1 of 2nd dimension\n",
     "x[:, :, 1]"
    ]
   },
@@ -2534,7 +2556,7 @@
     }
    ],
    "source": [
-    "# Get index of 0 of 0th and 1st dimension and all values of the 2nd dimension\n",
+    "# Get index 0 of 0th and 1st dimension and all values of the 2nd dimension\n",
     "x[0, 0, :]"
    ]
   },
@@ -2582,7 +2604,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## PyTorch tensors & NumPy\n",
     "\n",
@@ -2787,7 +2811,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Reproducbility (trying to take random out of random)\n",
     "\n",
@@ -2871,7 +2897,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Running tensors and PyTorch objects on the GPUs (and making faster computations)\n",
     "\n",
@@ -2885,7 +2913,7 @@
     "### 1. Getting a GPU \n",
     "\n",
     "1. Easiest - Use Google Colab for a free GPU (options to upgrade as well)\n",
-    "2. Use your own GPU - takes a little bit of setup and requires teh investment of purchasing a GPU, there's a lots of options...\n",
+    "2. Use your own GPU - takes a little bit of setup and requires the investment of purchasing a GPU, there's a lots of options...\n",
     "3. Use cloud computing - GCP, AWS, Azure, these services allows you to rent computers on the cloud and access them \n",
     "\n",
     "for 2, 3 PyTorch + GPU drivers (CUDA) takes a little bit of setting up, to do this, refer to PyTorch setup documenttion:https://pytorch.org/get-started/locally/    \n",
@@ -2894,7 +2922,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### 2. Check for GPU access with PyTorch "
    ]
@@ -2973,7 +3003,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### 3. putting tensors (and models) on the GPU \n",
     "\n",
@@ -3044,7 +3076,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### 4. Moving tensors back to the CPU"
    ]
